[gd_scene load_steps=8 format=3 uid="uid://4vugp26nqo15"]

[ext_resource type="Script" path="res://Scripts/Enemies/rolling_enemy.gd" id="1_5jcec"]
[ext_resource type="Texture2D" uid="uid://6351do0c58g7" path="res://PNGs/Enemies/roller_attack.png" id="2_tjbbo"]
[ext_resource type="Texture2D" uid="uid://bxaemwr1wt7i4" path="res://PNGs/Enemies/rolling_enemy.png" id="3_eo7a3"]
[ext_resource type="Texture2D" uid="uid://by8ty1d2c2qv2" path="res://PNGs/Enemies/alert.png" id="4_c374u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7qjub"]
size = Vector2(71, 149)

[sub_resource type="SpriteFrames" id="SpriteFrames_3ce0h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tjbbo")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_eo7a3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_hirpm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_c374u")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="rolling_enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 6
script = ExtResource("1_5jcec")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-10.5, 7.5)
shape = SubResource("RectangleShape2D_7qjub")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_3ce0h")
animation = &"idle"

[node name="WallDetector" type="RayCast2D" parent="."]
target_position = Vector2(-66, -1)
collision_mask = 2

[node name="TopandBottomDetector" type="RayCast2D" parent="."]
target_position = Vector2(0, -78)
collision_mask = 2

[node name="HealthBarBackground" type="ColorRect" parent="."]
offset_left = -63.0
offset_top = -95.0
offset_right = 65.0
offset_bottom = -76.0
color = Color(0, 0, 0, 1)

[node name="HealthBar" type="ColorRect" parent="."]
offset_left = -60.0
offset_top = -91.0
offset_right = 60.0
offset_bottom = -81.0
color = Color(0.263748, 0.586533, 0, 1)

[node name="View" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="View"]
target_position = Vector2(-171, -424)

[node name="RayCast2D2" type="RayCast2D" parent="View"]
target_position = Vector2(-402, -301)

[node name="RayCast2D3" type="RayCast2D" parent="View"]
target_position = Vector2(-506, 2)

[node name="RayCast2D4" type="RayCast2D" parent="View"]
target_position = Vector2(-459, 174)

[node name="RayCast2D5" type="RayCast2D" parent="View"]
target_position = Vector2(-251, 387)

[node name="RayCast2D6" type="RayCast2D" parent="View"]
target_position = Vector2(-387, 277)

[node name="RayCast2D7" type="RayCast2D" parent="View"]
target_position = Vector2(-486, 82)

[node name="RayCast2D8" type="RayCast2D" parent="View"]
target_position = Vector2(-482, -151)

[node name="RayCast2D9" type="RayCast2D" parent="View"]
target_position = Vector2(-285, -380)

[node name="RayCast2D10" type="RayCast2D" parent="View"]
target_position = Vector2(-228, -403)

[node name="RayCast2D11" type="RayCast2D" parent="View"]
target_position = Vector2(-343, -348)

[node name="RayCast2D12" type="RayCast2D" parent="View"]
target_position = Vector2(-443, -231)

[node name="RayCast2D13" type="RayCast2D" parent="View"]
target_position = Vector2(-490, -76)

[node name="RayCast2D14" type="RayCast2D" parent="View"]
target_position = Vector2(-496, 43)

[node name="RayCast2D15" type="RayCast2D" parent="View"]
target_position = Vector2(-467, 128)

[node name="RayCast2D16" type="RayCast2D" parent="View"]
target_position = Vector2(-422, 224)

[node name="RayCast2D17" type="RayCast2D" parent="View"]
target_position = Vector2(-326, 337)

[node name="PursuitTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="DetectTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DashTimer" type="Timer" parent="."]

[node name="Alert" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -128)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_hirpm")

[connection signal="timeout" from="PursuitTimer" to="." method="_on_pursuit_timer_timeout"]
[connection signal="timeout" from="DetectTimer" to="." method="_on_detect_timer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
